Fixed outdated JWT
