# src/main/resources/api/api.yaml
@@ -27,8 +27,6 @@ tags:
     description: Các thao tác phục vụ việc thanh toán khi mua hàng.
   - name: order
     description: Các thao tác với đơn hàng.
-  - name: shop
-    description: Các thao tác với cửa hàng.
   - name: review
     description: Các thao tác phục vụ việc đánh giá sản phẩm.
   - name: address
@@ -55,8 +53,7 @@ paths:
           content:
             application/json:
               schema:
-                type: string
-                description: Mã jwt dùng để xác thực người dùng.
+                $ref: '#/components/schemas/SuccessResponse'
 
   /api/v1/auth/sign-up:
 
@@ -77,8 +74,7 @@ paths:
           content:
             application/json:
               schema:
-                type: string
-                description: Thông báo thao tác thành công.
+                $ref: '#/components/schemas/SuccessResponse'
 
   /api/v1/user/{username}:
 
@@ -210,10 +206,10 @@ components:
         errorCode:
             type: string
             description: Mã lỗi dễ nhận biết riêng trong hệ thống.
-        message:
+        statusText:
           type: string
           description: Mô tả dễ hiểu về lỗi gặp phải.
-        httpStatus:
+        status:
           type: int
           description: Mã trạng thái HTTP.
 
